--- a/src/css/_variable.scss
+++ b/src/css/_variable.scss
@@ -4,12 +4,13 @@ $red:                       #d70000;
 $violet:                    #30219f;
 $darkblue:                  #1C097A;
 $lightgreen:                #d3fb78;
+$green:                     #97cb23;
+$darkgreen:                 #39482f;
 $darkred:                   #6c1400;
-
 $white:                     #ffffff;
 $black:                     #0e0101;
 
-$grey:                      #525154;
+$grey:                      #3f3f3f;
 $lightgrey:                 #858585;
 
 $link-color:                #1C097A !default;
