--- a/src/dev.pug
+++ b/src/dev.pug
@@ -108,7 +108,8 @@ html(lang="ru", dir="ltr")
                         .heading.heading_small Комплексная разработка сайта
                         .offer Мы пропагандируем индивидуальный расчет стоимости каждого проекта, но знаем вы хотите видеть хотя бы примерные цены поэтому немного цифр
                 .row.align-items-center.justify-content-center
-                    .col-xl-3.col-lg-5
+                    .col-xl-3.col-lg-5.p-relative
+                        img.element.element_1(src="../images/comment/dev_comment_0.png")
                         .price
                             .price__header Лендинг
                             .price__content
@@ -118,7 +119,8 @@ html(lang="ru", dir="ltr")
                                 p Что-то еще тут написать для баланса
                             .price__time от 7 дней
                             .price__footer стоимость 13к+(за 3-4 экрана)
-                    .col-xl-3.col-lg-5
+                    .col-xl-3.col-lg-5.p-relative
+                        img.element.element_2(src="../images/comment/dev_comment_2.png")
                         .price.price_large
                             .price__header Сайт-визитка
                             .price__content
@@ -129,7 +131,8 @@ html(lang="ru", dir="ltr")
                             .price__time от 10 дней
                             .price__info контент предоставляется заказчиком
                             .price__footer стоимость 45к+
-                    .col-xl-3.col-lg-5
+                    .col-xl-3.col-lg-5.p-relative
+                        img.element.element_3(src="../images/comment/dev_comment_1.png")
                         .price
                             .price__header Магазин
                             .price__content
@@ -170,7 +173,6 @@ html(lang="ru", dir="ltr")
                         .price-line.even
                             .price-line__title Настройка ретаргетинга (показ рекламы тем, кто ушел с сайта без покупки или заказа услуги)
                             .price-line__value от 5к
-
         .content.content_contact
             .container
                 .row.align-items-end
