--- a/src/seo.pug
+++ b/src/seo.pug
@@ -166,7 +166,8 @@ html(lang="ru", dir="ltr")
                         .heading.heading_small Тарифы на продвижение
                         .offer В зависимости от размера вашего сайта, его состояния и скорости получения необходимого результата, были разработаны 3 основных тарифа
                 .row.align-items-center.justify-content-center
-                    .col-xl-3.col-lg-5
+                    .col-xl-3.col-lg-5.p-relative
+                        img.element.element_1(src="../images/comment/seo_comment_0.png")
                         .price
                             .price__header упрощенный
                             .price__content
@@ -180,7 +181,8 @@ html(lang="ru", dir="ltr")
                                 p.text-uppercase.text-bold конкурентная тематика
                                 p займемся технической оптимизацией, улучшением информации на сайте и внешнего вида - предложение сформируем исходя из ваших целей
                             .price__footer стоимость 45к в месяц
-                    .col-xl-3.col-lg-5
+                    .col-xl-3.col-lg-5.p-relative
+                        img.element.element_3(src="../images/comment/seo_comment_2.png")
                         .price
                             .price__header ускоренный
                             .price__content
