--- a/src/blog_inside.pug
+++ b/src/blog_inside.pug
@@ -2,7 +2,7 @@ html(lang="ru", dir="ltr")
     include chunks/head.pug
     body.inside-page
         script(src="./js/jquery.min.js")
-        script(src="./js/jquery.nicescroll.min.js")
+        script(src="./js/jquery.inputmask.js")
         script(src="./js/app.min.js")
         include chunks/header.pug
         .blog.page
@@ -74,7 +74,7 @@ html(lang="ru", dir="ltr")
                     .col-xl-6
                         h4.heading Нужны клиенты? <br/> Мы знаем как их получить
                         form.form.form_inline(action="")
-                            input.input-text(type="tel" placeholder="Ваш контактный телефон" value="")
+                            input.in-phone.input-text(type="tel" placeholder="Ваш контактный телефон" value="")
                             button.btn.btn_primary(type="submit") Хочу больше клиентов
                     .col-xl-3
                         .offer How one dull get busy dare far. At principle perfectly by sweetness do. Decisively advantages nor expression unpleasing she led met. Indulgence contrasted sufficient to unpleasant in in insensible favourable. Hard do me sigh with west same lady. So by colonel hearted ferrars. Small for ask shade water manor think men begin. Equally he minutes my hastily. Estate was tended ten boy nearer seemed. Estate was tended ten boy nearer seemed. Up hung mr we give rest half. Their saved linen downs tears son add music. 
