--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -174,7 +174,7 @@ a{
     &_title{
         background: linear-gradient(45deg, #2b248a 0%, #361cbc 100%);
         padding: 290px 0 100px;
-        min-height: 100vh;
+        // min-height: 100vh;
         &__svg{
             position: absolute;
             left: 0;
