--- a/src/chunks/footer.pug
+++ b/src/chunks/footer.pug
@@ -1,7 +1,7 @@
 footer.footer
     .container
         .row.justify-content-between.align-items-center
-            .col
+            .col-12.col-sm-4.col-lg-2
                 svg.footer__logo(viewBox="0 0 320 80" preserveAspectRatio="xMidYMin meet" x="0px" y="0px")
                     g
                         path.footer__logo__path(d="M121.6,1.6C102,1.6,86.2,17.5,86.2,37s15.9,35.4,35.4,35.4S157,56.6,157,37v0C157,17.5,141.2,1.6,121.6,1.6z M121.6,46.9   c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8c5.4,0,9.8,4.4,9.8,9.8C131.4,42.5,127,46.9,121.6,46.9C121.6,46.9,121.6,46.9,121.6,46.9   L121.6,46.9z")
@@ -14,9 +14,9 @@ footer.footer
                             path.footer__logo__path(d="M23.9,1.8c1.9-0.6,3.5,0.5,5.1,1.8c7.7,6.3,15.3,12.4,23,18.7c5.3,4.3,10.6,8.6,15.7,13.1c4.5,4,7.5,8.9,7.5,15.2    C75.4,58,71.6,65,65.2,68.9c-4,2.5-8.7,3.7-13.5,3.6c-0.9,0-1.9-0.3-2.6-0.9c-8.9-6.4-17.8-12.9-26.5-19.5    c-6-4.4-11.4-9.5-16-15.4c-4.2-5.2-5.8-12-4.2-18.6c1.2-5.3,4.6-9.9,9.3-12.7C15.2,3.1,19.5,1.8,23.9,1.8z")
                             path.footer__logo__path(d="M40.2,72.4H2.7V42.4L40.2,72.4z")
                             path.footer__logo__path(d="M70.7,1.7v28.5L36,1.7H70.7z")
-            .col
+            .col-12.col-sm-4.col-lg-2
                 a.footer__email(href="mailto:work@websoho.ru") work@websoho.ru
-            .col.col-xl-6
+            .col-12.col-xl-6.col-lg-6
                 ul.footer__navbar
                     li.footer__navbar__item
                         a.footer__navbar__link(href="#") Верстка и разработка
