--- a/src/chunks/header.pug
+++ b/src/chunks/header.pug
@@ -1,7 +1,7 @@
 header.header
     .container
         .row
-            .col-3.col-xl-1
+            .col-3.col-md-2.col-xl-1
                 svg.header__logo(viewBox="0 0 80 320" preserveAspectRatio="xMidYMin meet" x="0px" y="0px")
                     g
                         path.header__logo__path(d="M73.8,119.8c0-19.6-15.9-35.4-35.4-35.4S3,100.3,3,119.8s15.8,35.4,35.4,35.4l0,0C57.9,155.2,73.8,139.4,73.8,119.8zM28.5,119.8c0-5.4,4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8c0,5.4-4.4,9.8-9.8,9.8C32.9,129.7,28.5,125.3,28.5,119.8L28.5,119.8L28.5,119.8z")
