--- a/src/chunks/header_inside.pug
+++ b/src/chunks/header_inside.pug
@@ -1,7 +1,7 @@
 header.header
     .container
         .row.align-items-end
-            .col-3.col-lg-2.col-xl-2
+            .col-3.col-md-2.col-xl-2
                 svg.header__logo.header__logo_inside(viewBox="0 0 320 80" preserveAspectRatio="xMidYMin meet" x="0px" y="0px")
                     g
                         path.header__logo__path(d="M121.6,1.6C102,1.6,86.2,17.5,86.2,37s15.9,35.4,35.4,35.4S157,56.6,157,37v0C157,17.5,141.2,1.6,121.6,1.6z M121.6,46.9   c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8c5.4,0,9.8,4.4,9.8,9.8C131.4,42.5,127,46.9,121.6,46.9C121.6,46.9,121.6,46.9,121.6,46.9   L121.6,46.9z")
